# llama-server

./: .gitignore  CMakeLists.txt  README.md
.github/prompts/: plan-Illama.prompt.md
src/: CMakeLists.txt  cli.cpp  llama_wrapper.cpp  llama_wrapper.h  model_manager.cpp  model_manager.h  server.cpp  tests.cpp
